--- a/package.json
+++ b/package.json
@@ -7,6 +7,15 @@
     "serve": "vite preview"
   },
   "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.26.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "prettier": "^2.4.1",
     "sass": "^1.42.1",
     "typescript": "^4.3.2",
     "vite": "^2.5.4"
