--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "test": "jest"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
@@ -15,6 +16,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.26.0",
     "eslint-plugin-react-hooks": "^1.7.0",
+    "jest": "^27.2.2",
     "prettier": "^2.4.1",
     "sass": "^1.42.1",
     "typescript": "^4.3.2",
