--- a/package.json
+++ b/package.json
@@ -5,17 +5,22 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "serve": "vite preview",
-    "test": "jest"
+    "cypress:start:app": "BROWSER=none react-scripts -r @cypress/instrument-cra start",
+    "cypress:start:wait": "start-server-and-test cypress:start:app http://localhost:3000",
+    "cypress:open": "npm run cypress:start:wait -- \"cypress open\"",
+    "cypress:run": "npm run cypress:start:wait -- \"cypress run\""
   },
   "devDependencies": {
+    "@cypress/instrument-cra": "^1.4.0",
+    "cypress": "^8.4.1",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-prettier": "^4.0.0",
-    "jest": "^27.2.2",
     "prettier": "^2.4.1",
     "sass": "^1.42.1",
+    "start-server-and-test": "^1.14.0",
     "typescript": "^4.3.2",
     "vite": "^2.5.4"
   }
